2002-03-11 Evan Teran <emt3734@rit.edu>
	* started work on making calculator code _seperate_ from the
	gui code, the goal here is the make the calculating core
	replacable with any library (hopfully with better precision) simply by
	wrapping it in a class
	* made it some many buttons are disabled when unavailabled (A-F) not enabled
	unless we are in HEX mode, less confusion for users who arent familiar with
	different bases
	* removed some code that is never getting called
	* why oh why are exceptions disabled in the standard config, I would like to
	use them :(
	
2001-10-18 Evan Teran <emt3734@rit.edu>
	* removed configdlg.* from source tree as it is not part of the compile
	* changed options dialog to use smarter layouts, and also fixed spinbox
	size problem so they are now usable
	* synced changed I made to the KDE 2.2.1 release version to match CVS
	version which compiles under KDE 3.0 w/ QT 3.0.0
	* made sure the clear (clear entry) button functioned properly, my minor
	change before broke it in some situations


2001-10-12 Evan Teran <emt3734@rit.edu>
	* Reorganized code for all files, much more consistant now
	* completely reworked the cvb (convert to binary) function
	it now is sane, the last one did a rediculous amount of
	unneeded work
	* changed C/C++ headers to use new style as per ANSI/ISO 
	standard
	* removed fontdlg.cpp/h from tree, not even used in compile :P
	* made binary mode 32-bit
	* reorganized UpdateDisplay code to make more sense
	* found possible nasty memleak in EnterEqual
	* now use my UNUSED macro to perform (void)var on unused paramters
	to avoid compile warnings, much more readable this way
	* merged setXXX functions to angle_selected/base_selected
	then removed the setXXX functions as they no longer have any purpose
	* changed a ton of code to use true C++ bools, makes logic
	more clear
	* made cvb a static member of QtCalculator instead of an ugly global
	function