@@ -1,1 +1,1 @@
-#define KCALCVERSION "1.3.1"
+#define KCALCVERSION "1.3.2"
